--- a/src/views/Encomienda/listar.hbs
+++ b/src/views/Encomienda/listar.hbs
@@ -1,15 +1,13 @@
 <link rel="stylesheet" href="/src/public/css/Encomienda/listar.css">
 <form action="detalle_encimienda/lista/1" method="get"></form>
 <head>
- <head>
     <div id="contendodrhe">
         <div>
             <div class="navbar">
                 <div id="imagen">
                     <img src="/img/logon.png"></img></div>
-                    <a id="inicio" href="/views/inicio.hbs">Inicio</a>
-                    <a id="administrador" href="#">Administrador</a>
-                    <img id="img2" src="/img/perfil.png" alt="">
+                    <a id="inicio" href="#">Inicio</a>
+                    <button id="boton" type="button" href="#">Ingresar</button>
             </div>
     </div>
 </head>
