--- a/src/views/cooperativa/agregar.hbs
+++ b/src/views/cooperativa/agregar.hbs
@@ -33,9 +33,9 @@
 
         <label id="horario" for="horarios">Horarios de atencion</label>  
         <select id="horarioAte" name="horarios" required>
-          <option value="masculino">7:00 am a 13:00pm</option>
-          <option value="femenino">15:00pm a 18:00pm</option>
-          <option value="otro">19:00pm a 23:00pm</option>
+          <option value="horario1">7:00 am a 13:00pm</option>
+          <option value="horario2">15:00pm a 18:00pm</option>
+          <option value="horario3">19:00pm a 23:00pm</option>
 
        <br>
 
