--- a/src/views/inicio.hbs
+++ b/src/views/inicio.hbs
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="/css/inicio.css">
-<from action="/"method="post">
+<from action="/"method="POST">
 <body>
 <head>
     <div id="contendodrhe">
@@ -8,9 +8,7 @@
                 <div id="imagen">
                     <img src="/img/logon.png"></img></div>
                     <a id="inicio" href="#">Inicio</a>
-                  <li class="nav__item">
-                    <a href="login.hbs" class="nav__link">Ingresar</a>
-                    </li>
+   <div id="boton"> <a href="login">INGRESAR</a></div>
             </div>
     </div>
 </head>
@@ -25,12 +23,12 @@
         <img src="/img/login.jpg" alt="" style="width:80%">
             <h1>Buses y</h1>
             <h1>Cooperativa</h1>
-            <a href="/views/cooperativa/agregar.hbs">Ver más..</a>
+            <a href="/buses/agregar">Ver más..</a>
     </div>
         <div id="card2">
             <img src="/img/empleados.png" alt="" style="width:80%">
                 <h1>Empleados</h1> <br>
-                <a href="/views/empleado/agregar.hbs">Ver más..</a>
+                <a href="/empleado/agregar">Ver más..</a>
         </div>
     </div>
     </div>
@@ -38,7 +36,7 @@
             <img src="/img/encomiendav2.jpg" alt="" style="width:80%">
                 <h1>Encomienda</h1>
                 
-                <a href="">Ver más..</a>
+                <a href="/encomienda/agregar">Ver más..</a>
         </div>
     </div>
     </div>
@@ -46,7 +44,7 @@
             <img src="/img/choferes.jpeg" alt="" style="width:85%">
                 <h1>Choferes</h1>
              
-                <a href="">Ver más..</a>
+                <a href="/chofer/agregar">Ver más..</a>
         </div>
     </div>
 </div>
