--- a/src/views/inicio2.hbs
+++ b/src/views/inicio2.hbs
@@ -1,5 +1,6 @@
+
 <link rel="stylesheet" href="/css/inicio2.css">
-<from action="/"method="post">
+<form action="/inicio2"method="POST">
 <body>
 <head>
     <div id="contendodrhe">
@@ -7,7 +8,6 @@
             <div class="navbar">
                 <div id="imagen">
                     <img src="/img/logon.png"></img></div>
-                    <a id="inicio" href="/views/inicio.hbs">Inicio</a>
                     <a id="administrador" href="#">Administrador</a>
                     <img id="img2" src="/img/perfil.png" alt="">
             </div>
@@ -24,28 +24,29 @@
         <img src="/img/login.jpg" alt="" style="width:80%">
             <h1>Buses y</h1>
             <h1>Cooperativa</h1>
-            <a href="">Ver más..</a>
+            <a href="/buses/agregar">Ver más..</a>
+            
     </div>
         <div id="card2">
             <img src="/img/empleados.png" alt="" style="width:80%">
                 <h1>Empleados</h1> <br>
-                <a href="">Ver más..</a>
+                <a href="/empleado/agregar">Ver más..</a>
         </div>
     </div>
     </div>
         <div id="card3">
             <img src="/img/encomiendav2.jpg" alt="" style="width:80%">
                 <h1>Encomienda</h1>
-                <p class="price">Encontrarás aventuras que nunca podrás olvidar.</p>
-                <a href="">Ver más..</a>
+                
+                <a href="/encomienda/agregar">Ver más..</a>
         </div>
     </div>
     </div>
         <div id="card4">
             <img src="/img/choferes.jpeg" alt="" style="width:85%">
                 <h1>Choferes</h1>
-                <p class="price">Encontrarás aventuras que nunca podrás olvidar.</p>
-                <a href="">Ver más..</a>
+             
+                <a href="/chofer/agregar">Ver más..</a>
         </div>
     </div>
 </div>
@@ -86,4 +87,4 @@
       </div>
     </footer>
 </body>
-</from>
+</form>
