--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -1,16 +1,9 @@
 <link rel="stylesheet" href="/css/login.css">
-<from action ="/"method="post">
-
- <li class="nav__item">
-                    <a href="inicio.hbs" class="nav__link">Ingresar</a>
-                    </li>
+<from action ="/login"method="POST">
 <title>Inicio de Sesion</title>
 <body>
             <div class="contenedor">
                 <img class="imagen" src="/img/login.jpg" alt="">
-                <img class="hogar" src="/img/hogar.png" alt="">
-                <img class="desbloquear" src="/img/desbloquear.png" alt="">
-                <img class="usuario" src="/img/usuario.png" alt="">
 
                  <h1>Inicio de Sesión</h1>
                  <form>
@@ -26,11 +19,9 @@
                 Recordar Usuario y Contraseña
                 </label>
             </div>
-            <div id="input-box">
-                    <input type="submit" value="Iniciar sesión" />
-                </div>
+                       <div id="boton1">
+                 <a href="/">Iniciar Sesion</a>
         </form>
-    
     </div>
             
 </body>   
