--- a/src/public/css/empleados/empleados.css
+++ b/src/public/css/empleados/empleados.css
@@ -3,6 +3,15 @@ body {
     padding: 0;
     background-color: #f4f4f4;
   }
+  #img2{
+    position: relative;
+    width: 67px;
+    height: 63px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    right: 60px;
+  }
 #contenedorhe{
     position: absolute;
     top: 0%;
@@ -91,7 +100,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 #nombre{
-    width: 310px;
+    width: 250px;
     height: 30px;
     border-radius: 5px 2px;
     padding: 0px, 31px, 0px, 7px;
@@ -104,7 +113,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 #apellido{
-    width: 310px;
+    width: 250px;
     height: 30px;
     border-radius: 5px 2px;
     padding: 0px, 31px, 0px, 7px;
@@ -145,49 +154,51 @@ body {
 #sexoSele{
     position: relative;
     right: -20px;
-    width: 310px;
+    width: 250px;
     height: 30px;
     border-radius: 5px 2px;
 }
+
 #canton{
-    position: relative;
-    left: 0px;
-    top: 10px;
-    font-family: Arial, Helvetica, sans-serif;
+  position: relative;
+  left: 0px;
+  top: -35px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 #cantonIn{
-    top: 9px;
-    position: relative;
-    right: 0px;
-    width: 310px;
-    height: 30px;
-    border-radius: 5px 2px;
+  position: relative;
+  left: -55px;
+  width: 250px;
+  height: 30px;
+  border-radius: 5px 2px;
+  padding: 0px, 31px, 0px, 7px;
+  gap: 10px;
 }
 #pronvin{
-    position: relative;
-    left: 70px;
-    top: -25px;
-    font-family: Arial, Helvetica, sans-serif;
+  position: relative;
+  left: 70px;
+  top: -35px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 #provincia{
-    top: 9px;
-    position: relative;
-    right: 0px;
-    width: 310px;
-    height: 30px;
-    border-radius: 5px 2px;
+  width: 250px;
+  height: 30px;
+  border-radius: 5px 2px;
+  padding: 0px, 31px, 0px, 7px;
+  gap: 10px;
 }
 #sect{
     position: relative;
-    left: 70px;
-    top: -25px;
+    left: 65px;
+    top: -35px;
     font-family: Arial, Helvetica, sans-serif;
 }
 #sector{
-    top: 9px;
+    top: 0px;
     position: relative;
-    right: -16px;
-    width: 310px;
+    left: 0px;
+    right: 0px;
+    width: 250px;
     height: 30px;
     border-radius: 5px 2px;
 }
@@ -248,21 +259,21 @@ body {
 }
 #email{
     position: relative;
-    left: -25px;
-    top: -25px;
+    left: -20px;
+    top: -20px;
     font-family: Arial, Helvetica, sans-serif;
 }
 #Email{
-    top: 9px;
+    top: -27px;
     position: relative;
-    right: 88px;
+    right: -730px;
     width: 265px;
     height: 30px;
     border-radius: 5px 2px;
 }
 #area{
     position: relative;
-    left: 1px;
+    left: -260px;
     top: 15px;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -291,96 +302,95 @@ body {
     background-color: #0084FF;
     color: white;
 }
-
 .container{
-    max-width:840px;
-    margin: 0 auto 8px auto;
-  }
-  #footer{
-    background-color: #1D202A;
-    position: relative;
-    top: 100px;
-    padding: 100px; 
-  }
-  #footer p{
-    position: absolute;
-    color: white;
-    top: 35px;
-  }
-  #contact{
-    position: absolute;
-  }
-  #contact p{
-    position: absolute;
-    top: -65px;
-  }
-  #contact a{
-    position: relative;
-    color: white;
-    left: 80px;
-    top: -50px;
-  }
-  #btnwasa{
-    position: absolute;
-    height: 40px;
-    width: 40px;
-    top: 0px;
-  }
-  #btnmail{
-    position: absolute;
-    height: 40px;
-    width: 40px;
-    top: 75px;
-  }
-  #btntelef{
-    position: absolute;
-    height: 40px;
-    width: 40px; 
-    top: 145px;
-  }
-  #inf a{
-    position: absolute;
-    left: 350px;
-    color: rgb(124, 124, 124);
-  }
-  #destin a{
-    position: absolute;
-    left: 600px;
-    color: rgb(124, 124, 124);
-  }
-  #destin p{
-    position: absolute;
-    left: 600px;
-    color: white;
-  }
-  .soport p{
-    left: 800px;
-  }
-  #soport a{
-    position: absolute;
-    left: 800px;
-    color: rgb(124, 124, 124);
-  }
-  #soport p{
-    position: absolute;
-    left: 800px;
-    color: white;
-  }
-  #follow{
-    position: absolute;
-    top: 0px;
-    left: 1030px;
-  }
-  #fb{
-    position: absolute;
-    height: 40px;
-    width: 40px; 
-    top: 80px;
-  }
-  #ig{
-    position: absolute;
-    height: 40px;
-    width: 40px; 
-    top: 80px;
-    left: 50px;
-  }
+  max-width:1040px;
+  margin: 0 auto 8px auto;
+}
+#footer{
+  background-color: #1D202A;
+  position: relative;
+  top: 100px;
+  padding: 100px; 
+}
+#footer p{
+  position: absolute;
+  color: white;
+  top: 35px;
+}
+#contact{
+  position: absolute;
+}
+#contact p{
+  position: absolute;
+  top: -65px;
+}
+#contact a{
+  position: relative;
+  color: white;
+  left: 80px;
+  top: -50px;
+}
+#btnwasa{
+  position: absolute;
+  height: 40px;
+  width: 40px;
+  top: 0px;
+}
+#btnmail{
+  position: absolute;
+  height: 40px;
+  width: 40px;
+  top: 75px;
+}
+#btntelef{
+  position: absolute;
+  height: 40px;
+  width: 40px; 
+  top: 145px;
+}
+#inf a{
+  position: absolute;
+  left: 350px;
+  color: rgb(124, 124, 124);
+}
+#destin a{
+  position: absolute;
+  left: 600px;
+  color: rgb(124, 124, 124);
+}
+#destin p{
+  position: absolute;
+  left: 600px;
+  color: white;
+}
+.soport p{
+  left: 800px;
+}
+#soport a{
+  position: absolute;
+  left: 800px;
+  color: rgb(124, 124, 124);
+}
+#soport p{
+  position: absolute;
+  left: 800px;
+  color: white;
+}
+#follow{
+  position: absolute;
+  top: 0px;
+  left: 1030px;
+}
+#fb{
+  position: absolute;
+  height: 40px;
+  width: 40px; 
+  top: 80px;
+}
+#ig{
+  position: absolute;
+  height: 40px;
+  width: 40px; 
+  top: 80px;
+  left: 50px;
+}
